# Routenplanung

./: .gitignore  CMakeLists.txt  README.md  route.txt
Application/: Routenplanung.cpp
Core/: Datatypes.hpp  Graph.cpp  Graph.h  Logger.cpp  Logger.hpp  Parser.cpp  Parser.hpp  Utility.cpp  Utility.hpp  o5mDisplaying.cpp  o5mFile.cpp  o5mFile.hpp  o5mProcessing.cpp  o5mPublicAPI.cpp
Docs/Bericht/: conference_101719.tex
Res/: filterString.txt  graph.txt  route_dijkstra.txt
Res/route_schlecht_luftlinie/: route_astar.txt
Res/route_weit/: OpenStreetMap.URL  overpass turbo1.URL
